variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: value x
x=0
^RunFour:3: error: not found: value x
while (x!=4){
       ^RunFour:5: error: not found: value x
    x=x+1 
    ^